# resume-parser

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routes/: upload.py
backend/app/schemas/: certification.py  education.py  experience.py  project.py  skill.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: FileUploader.jsx  ResumeForm.jsx
